fix(listitem): remove extra margin

--- a/packages/ui-core/src/components/List/ListItem.less
+++ b/packages/ui-core/src/components/List/ListItem.less
@@ -1,5 +1,9 @@
 @import '~styles/base.less';
 
 .mfui-beta-list-item {
-    margin: 12px 0 12px 40px;
+    margin-bottom: 12px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
